# github-notification-filter

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
src/: error.rs  main.rs  subscription.rs  util.rs
src/subscription/: gh_objects.rs  mod.rs
