[package]
name = "github-notification-filter"
version = "0.4.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"
license = "MIT OR APACHE-2.0"
build = "build.rs"

[dependencies]
clap = "2.33.3"
dirs = "3.0.1"
failure = "0.1.8"
once_cell = "1.5.2"
open = "1.4.0"
regex = "1.4.2"
serde_json = "1.0.59"

[dependencies.futures]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0.117"
default-features = false
features = ["derive"]

[dependencies.tokio]
version = "0.2.23"
default-features = false
features = ["macros", "rt-threaded"]

[dependencies.reqwest]
version = "0.10.9"
default-features = false
features = ["rustls-tls", "gzip"]

[build-dependencies]
chrono = "0.4.19"

[[bin]]
name = "ghnf"
path = "src/main.rs"
