[package]
name = "github-notification-filter"
version = "0.4.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"
license = "MIT OR APACHE-2.0"
build = "build.rs"

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
dirs = "3.0.1"
once_cell = { version = "1.5.2", default-features = false }
open = "1.4.0"
regex = "1.4.3"
serde_json = "1.0.61"
thiserror = "1.0.23"

[dependencies.futures]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.reqwest]
version = "0.11.0"
default-features = false
features = ["default-tls", "gzip"]

[dependencies.serde]
version = "1.0.123"
default-features = false
features = ["derive"]

[dependencies.tokio]
version = "1.1.1"
default-features = false
features = ["macros", "rt-multi-thread"]

[build-dependencies]
chrono = "0.4.19"

[[bin]]
name = "ghnf"
path = "src/main.rs"
